--- a/_hero6.scss
+++ b/_hero6.scss
@@ -1,49 +1,57 @@
 .hero6{
     display: flex;
-    justify-content:center;
-    gap: 50px;
+    justify-content:space-around;
+    // gap: 50px;
     // margin: 15px;
-    margin-top: 60px;
+    margin-top: 30px;
     // padding: 5px;
     flex-wrap: wrap;
     row-gap:5px;
 
     .hero6_1{
-        width: 450px;
+        // width: 450px;
         display: flex;
         background-color: whitesmoke;
+        transition: all 1s linear;
         // border: 1px solid black;q
         // flex-wrap: wrap;
 
         .hero6_1img img{
-            width: 300px;
+            width: 250px;
             height: 200px;
             background-size: cover;
         }
         .hero6_1con{
-            // text-align: center;
+            text-align: center;
             align-items: center;
             font-size: 12px;
             padding: 10px;
-            padding-top: 20px;
+            padding-top: 40px;
             // background-color:aliceblue;
             line-height: 25px;
         }
     }
+    .hero6_1:hover{
+        box-shadow: 1px 1px 5px 2px black;
+    }
     .hero6_2{
-        width: 450px;
+        transition: all 1s linear;
+
+        // width: 450px;
         display: flex;
        background-color: whitesmoke;
+    //    flex-wrap: wrap;
         // border: 1px solid black;
 
         .hero6_2img img{
-            width: 300px;
+            width: 250px;
             height: 200px;
         }
         .hero6_2con{
-            // text-align: center;
+            text-align: center;
             align-items: center;
             padding: 12px;
+            padding-top: 40px;
             font-size: 12px;
             
             // background-color: whitesmoke;
@@ -51,6 +59,9 @@
 
             
         }
+    }
+    .hero6_2:hover{
+        box-shadow: 1px 1px 5px 2px black;
     }
     button{
         padding: 5px;
