--- a/kalamandirscss.css
+++ b/kalamandirscss.css
@@ -243,43 +243,51 @@
 
 .hero6 {
   display: flex;
-  justify-content: center;
-  gap: 50px;
-  margin-top: 60px;
+  justify-content: space-around;
+  margin-top: 30px;
   flex-wrap: wrap;
   row-gap: 5px;
 }
 .hero6 .hero6_1 {
-  width: 450px;
   display: flex;
   background-color: whitesmoke;
+  transition: all 1s linear;
 }
 .hero6 .hero6_1 .hero6_1img img {
-  width: 300px;
+  width: 250px;
   height: 200px;
   background-size: cover;
 }
 .hero6 .hero6_1 .hero6_1con {
+  text-align: center;
   align-items: center;
   font-size: 12px;
   padding: 10px;
-  padding-top: 20px;
+  padding-top: 40px;
   line-height: 25px;
 }
+.hero6 .hero6_1:hover {
+  box-shadow: 1px 1px 5px 2px black;
+}
 .hero6 .hero6_2 {
-  width: 450px;
+  transition: all 1s linear;
   display: flex;
   background-color: whitesmoke;
 }
 .hero6 .hero6_2 .hero6_2img img {
-  width: 300px;
+  width: 250px;
   height: 200px;
 }
 .hero6 .hero6_2 .hero6_2con {
+  text-align: center;
   align-items: center;
   padding: 12px;
+  padding-top: 40px;
   font-size: 12px;
   line-height: 30px;
+}
+.hero6 .hero6_2:hover {
+  box-shadow: 1px 1px 5px 2px black;
 }
 .hero6 button {
   padding: 5px;
@@ -350,6 +358,19 @@ body {
   margin-top: 20px;
   border-top: 1px solid #ecf0f1;
   padding-top: 10px;
+}
+
+.lastnav {
+  background-color: white;
+  position: fixed;
+  bottom: 1px;
+  width: 100%;
+}
+.lastnav ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  padding: 15px;
 }
 
 .marq {
