--- a/kalamandirscss.scss
+++ b/kalamandirscss.scss
@@ -11,6 +11,7 @@
 @import "_hero5.scss";
 @import "_hero6.scss";
 @import "_footer.scss";
+@import "_lastnav.scss";
 .marq{
     background-color: red;
     color: white;
