--- a/_lastnav.scss
+++ b/_lastnav.scss
@@ -2,6 +2,8 @@
     background-color: white;
     position:fixed;
     bottom: 1px;
+    text-align: center;
+    align-items: center;
    
     
     width: 100%;
