--- a/kalamandirscss.css
+++ b/kalamandirscss.css
@@ -364,6 +364,8 @@ body {
   background-color: white;
   position: fixed;
   bottom: 1px;
+  text-align: center;
+  align-items: center;
   width: 100%;
 }
 .lastnav ul {
